--- a/css/index.css
+++ b/css/index.css
@@ -133,5 +133,41 @@ table {
 html,
 body {
   height: 100%;
-  background-color: red;
+  background-color: lightgray;
+}
+.container {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0 auto;
+}
+.container .header {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+}
+.container .header nav {
+  width: 100%;
+  border: 1px solid red;
+  display: flex;
+  justify-content: space-between;
+  margin: 20px;
+}
+.container .top-content {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 20px;
+}
+.container .top-content .headshot {
+  border: 1px solid green;
+  width: 40%;
+}
+.container .top-content .about {
+  border: 1px solid blue;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  width: 60%;
+}
+.container .top-content .skills {
+  width: 80%;
 }
