--- a/less/index.less
+++ b/less/index.less
@@ -55,6 +55,48 @@ table {
 
 html, body {
 	height: 100%;
-	background-color: red;
+	background-color:lightgray;
 }
 
+.container {
+	display: flex;
+	flex-wrap: wrap;
+	margin: 0 auto;
+
+	.header {
+		display: flex;
+		flex-wrap: wrap;
+		width: 100%;
+		
+		nav {
+			width: 100%;
+			border: 1px solid red;
+			display: flex;
+			justify-content: space-between;
+			margin: 20px;
+		}
+	}
+
+	.top-content {
+		display: flex;
+		flex-wrap: wrap;
+		margin: 20px;
+
+		.headshot {
+			border: 1px solid green;
+			width: 40%;
+		}
+
+		.about {
+			border: 1px solid blue;
+			display: flex;
+			flex-wrap: wrap;
+			flex-direction: row;
+			width: 60%;
+		}
+
+		.skills {
+			width: 80%;
+		}
+	}
+}
