--- a/less/index.less
+++ b/less/index.less
@@ -58,6 +58,10 @@ html, body {
 	background-color:lightgray;
 }
 
+h4 {
+	font-size: 22px;
+	font-weight: 500;
+}
 .container {
 	display: flex;
 	flex-wrap: wrap;
@@ -70,7 +74,6 @@ html, body {
 		
 		nav {
 			width: 100%;
-			border: 1px solid red;
 			display: flex;
 			justify-content: space-between;
 			margin: 20px;
@@ -85,6 +88,7 @@ html, body {
 		.headshot {
 			border: 1px solid green;
 			width: 40%;
+			align-self: center;
 		}
 
 		.about {
@@ -93,10 +97,42 @@ html, body {
 			flex-wrap: wrap;
 			flex-direction: row;
 			width: 60%;
+			margin-bottom: 30px;
+			align-self: center;
 		}
 
 		.skills {
 			width: 80%;
+
+			li {
+				border-top: 1px solid gray;
+				padding: 10px 0 10px 0
+			}
+		}
+
+		.workHistoryTable, th, tr, td {
+			border: 1px solid black;
+			padding: 5px;
+			width: 100%;
+		}
+	}
+
+	.bottom-content {
+		margin: 20px;
+	}
+
+	.contact-form {
+		width: 100%;
+		border: 1px solid red;
+		margin-top: 20px;
+
+		input {
+			padding: 9px 20px;
+			margin: 8px 0;
+		}
+		.textarea {
+			height: 100px;
+			width: 50%;
 		}
 	}
 }
