--- a/less/index.less
+++ b/less/index.less
@@ -61,10 +61,28 @@ html, body {
 h4 {
 	font-size: 22px;
 	font-weight: 500;
+	color: @font-color;
 }
-.container {
+
+@width: 100%;
+@font-color: darkblue;
+
+.margin () {
+	margin: 40px;
+}
+
+.flexbot () {
 	display: flex;
 	flex-wrap: wrap;
+}
+
+.mobile {
+	@media ( max-width: 500px) {
+
+	}
+}
+.container {
+	.flexbot;
 	margin: 0 auto;
 
 
@@ -74,18 +92,18 @@ h4 {
 		width: 100%;
 		
 		nav {
-			width: 100%;
+			width: @width;
 			display: flex;
 			justify-content: space-between;
 			background-color: darkgray;
-			padding: 20px;
+			padding: 20px 40px;
 		}
 	}
 
 	.top-content {
 		display: flex;
 		flex-wrap: wrap;
-		margin: 40px;
+		.margin;
 		justify-content: space-between;
 
 		.headshot {
@@ -95,7 +113,6 @@ h4 {
 		}
 
 		.about {
-			border: 1px solid blue;
 			display: flex;
 			flex-wrap: wrap;
 			flex-direction: row;
@@ -107,7 +124,7 @@ h4 {
 		.skills {
 			width: 47%;
 
-			@media ( max-width: 500px) {
+			@media ( max-width: 500px){
 				width: 100%;
 			}
 
@@ -120,7 +137,7 @@ h4 {
 		.work-history {
 			width: 47%;
 
-			@media ( max-width: 500px ) {
+			@media ( max-width: 500px) {
 				width: 100%;
 			}
 		}
@@ -136,12 +153,12 @@ h4 {
 	}
 
 	.bottom-content {
-		margin: 40px;
+		background-color: darkgray;
+		padding: 40px;
 	}
 
 	.contact-form {
 		width: 100%;
-		border: 1px solid red;
 		margin-top: 20px;
 
 		input {
